Decouple tunnel config name from interface name
Use fixed 'wg-android' as the Linux network interface name instead of
the config name. This removes the 15-char limit and restricted charset
([a-zA-Z0-9_=+.-]) imposed by Linux IFNAMSIZ, allowing config names
up to 200 chars with spaces, Unicode, and most characters.

Changes:
- Tunnel.java: Relaxed NAME_PATTERN/NAME_MAX_LENGTH, added INTERFACE_NAME
- GoBackend: wgTurnOn() uses Tunnel.INTERFACE_NAME
- WgQuickBackend: Uses INTERFACE_NAME for wg-quick and wg commands,
  tracks running state internally via currentTunnel field
- NameInputFilter: Only blocks / \ and null characters